# Adap.EpsilonAdv.training

./: .gitignore
libs/architectures/mlpe/architectures/: __init__.py
libs/architectures/mlpe/architectures/embeddings/: __init__.py  densenet.py  resnet.py
libs/architectures/mlpe/architectures/flows/: __init__.py  flow.py  iaf.py  iaf_old.py  maf.py  mixedflow.py  utils.py
libs/injection/: pyproject.toml
libs/logging/: pyproject.toml
ml4gw/ml4gw/: distributions.py
ml4gw/ml4gw/transforms/: scaler.py
projects/sandbox_sg/: pyproject.toml
projects/sandbox_sg/train/: pyproject.toml
projects/sandbox_sg/train/train/: train.py
typeo/: pyproject.toml  tox.ini
typeo/.github/workflows/: unit-tests.yaml
typeo/tests/: test_config_parsing.py  test_doc_utils.py  test_scriptify.py
typeo/typeo/: __init__.py  actions.py  doc_utils.py  parser.py  scriptify.py  subcommands.py  utils.py
