p[tool.poetry]
name = "typeo"
version = "0.1.6"
description = "Utilities for running functions as scripts"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^6.2"
pytest-depends = "^1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>1.2.0a2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "gtpy38: tests for python version 3.9 and higher",
    "gtpy39: tests for pythong version 3.10 and higher"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["typeo"]
multi_line_output = 3
include_trailing_comma = true
